--- a/lk11.html
+++ b/lk11.html
@@ -157,8 +157,7 @@
                     <tr class="head_t">
                       <th>Номер</th>
                       <th>ФИО</th>
-                      <th>Ранг на начало</th>
-                      <th>Расчетный ранг</th>
+                      <th>Тип соглашения</th>
                       <th>Скидка</th>
                       <th>Лицевой счет</th>
                       <th>ЛО</th>
@@ -167,6 +166,7 @@
                       <th>КО</th>
                       <th>ОО</th>
                       <th>Резерв</th>
+                      <th>Лидерский старт</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -178,8 +178,7 @@
                         </div>
                       </td>
                       <td>Михайлов Д. И.</td>
-                      <td>Прив.Клиент</td>
-                      <td>Консультант</td>
+                      <td>Дистрибьютор</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -192,6 +191,7 @@
                       <td>0</td>
                       <td>24</td>
                       <td>1235</td>
+                      <td>0</td>
                     </tr>
                     <tr>
                       <td>
@@ -201,8 +201,7 @@
                         </div>
                       </td>
                       <td>Михайлов Д. И.</td>
-                      <td>Прив.Клиент</td>
-                      <td>Консультант</td>
+                      <td>Дистрибьютор</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -215,6 +214,7 @@
                       <td>0</td>
                       <td>24</td>
                       <td>1235</td>
+                      <td>0</td>
                     </tr>
                     <tr>
                       <td>
@@ -224,8 +224,7 @@
                         </div>
                       </td>
                       <td>Михайлов Д. И.</td>
-                      <td>Прив.Клиент</td>
-                      <td>Консультант</td>
+                      <td>Дистрибьютор</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -238,6 +237,7 @@
                       <td>0</td>
                       <td>24</td>
                       <td>1235</td>
+                      <td>0</td>
                     </tr>
                     <tr>
                       <td>
@@ -247,8 +247,7 @@
                         </div>
                       </td>
                       <td>Михайлов Д. И.</td>
-                      <td>Прив.Клиент</td>
-                      <td>Консультант</td>
+                      <td>Дистрибьютор</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -261,6 +260,7 @@
                       <td>0</td>
                       <td>24</td>
                       <td>1235</td>
+                      <td>0</td>
                     </tr>
                     <tr>
                       <td>
@@ -270,8 +270,7 @@
                         </div>
                       </td>
                       <td>Михайлов Д. И.</td>
-                      <td>Прив.Клиент</td>
-                      <td>Консультант</td>
+                      <td>Дистрибьютор</td>
                       <td>33</td>
                       <td>
                         <div>
@@ -284,6 +283,7 @@
                       <td>0</td>
                       <td>24</td>
                       <td>1235</td>
+                      <td>0</td>
                     </tr>
                   </tbody>
                 </table>
