--- a/lk13.html
+++ b/lk13.html
@@ -229,6 +229,8 @@
                       <th>Запрос</th>
                       <th>Поставка</th>
                       <th>Приход</th>
+                      <th>Цена</th>
+                      <th>Баллы</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -238,12 +240,7 @@
                       <td>24</td>
                       <td>457</td>
                       <td>128</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>VIP - Продукция</td>
-                      <td>24</td>
-                      <td>457</td>
+                      <td>128</td>
                       <td>128</td>
                     </tr>
                     <tr>
@@ -252,12 +249,7 @@
                       <td>24</td>
                       <td>457</td>
                       <td>128</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>VIP - Продукция</td>
-                      <td>24</td>
-                      <td>457</td>
+                      <td>128</td>
                       <td>128</td>
                     </tr>
                     <tr>
@@ -265,6 +257,26 @@
                       <td>VIP - Продукция</td>
                       <td>24</td>
                       <td>457</td>
+                      <td>128</td>
+                      <td>128</td>
+                      <td>128</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>VIP - Продукция</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>128</td>
+                      <td>128</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>VIP - Продукция</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>128</td>
                       <td>128</td>
                     </tr>
                   </tbody>
