--- a/lk14.html
+++ b/lk14.html
@@ -131,20 +131,162 @@
         <div class="c_head">
           <h1>Запросы вышестоящим</h1>
         </div>
-        <div class="line_param_input">
-          <div class="l_p" style="margin-bottom: 30px">
-            <div class="nav_links" style="margin: 0">
-              <a class="brd_green fill w50" href="#">Создать новый запрос</a>
-            </div>
-          </div>
-        </div>
         <div class="component">
-          <div class="component_head">
-            <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input line_param_input_t">
-                <label>Период от и до</label>
-                <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
-                <span class="calendar"></span>
+          <div class="component_body">
+            <div class="l_p">
+              <div class="label_in">
+                <input type="text" class="tinput" />
+                <label class="tlabel" for>Поиск по ID или ФИО</label>
+                <span class="search"></span>
+              </div>
+            </div>
+            <div class="r_p" style="padding-right: 0">
+              <div class="nav_links nav_links_t">
+                <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="width: auto; margin-top: 0; float: right">Создать новый запрос</a>
+              </div>
+            </div>
+            <div class="f_part">
+              <div class="nav_top">
+                <ul>
+                  <li><a href="#">Экспорт в xls</a></li>
+                </ul>
+              </div>
+              <div class="middle_part">
+                <table class="otch_p fixtable">
+                  <thead>
+                  <tr class="head_t">
+                    <th>Номер</th>
+                    <th>ФИО</th>
+                    <th>Ранг на начало</th>
+                    <th>Расчетный ранг</th>
+                    <th>Скидка</th>
+                    <th>Лицевой счет</th>
+                    <th>ЛО</th>
+                    <th>ГО</th>
+                    <th>НГО</th>
+                    <th>КО</th>
+                    <th>ОО</th>
+                    <th>Резерв</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                        <span class="lt3">Томск-Кондырева</span>
+                      </div>
+                    </td>
+                    <td>Михайлов Д. И.</td>
+                    <td>Прив.Клиент</td>
+                    <td>Консультант</td>
+                    <td>33</td>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                      </div>
+                    </td>
+                    <td>33,24</td>
+                    <td>13,4</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>24</td>
+                    <td>1235</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                        <span class="lt3">Томск-Кондырева</span>
+                      </div>
+                    </td>
+                    <td>Михайлов Д. И.</td>
+                    <td>Прив.Клиент</td>
+                    <td>Консультант</td>
+                    <td>33</td>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                      </div>
+                    </td>
+                    <td>33,24</td>
+                    <td>13,4</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>24</td>
+                    <td>1235</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                        <span class="lt3">Томск-Кондырева</span>
+                      </div>
+                    </td>
+                    <td>Михайлов Д. И.</td>
+                    <td>Прив.Клиент</td>
+                    <td>Консультант</td>
+                    <td>33</td>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                      </div>
+                    </td>
+                    <td>33,24</td>
+                    <td>13,4</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>24</td>
+                    <td>1235</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                        <span class="lt3">Томск-Кондырева</span>
+                      </div>
+                    </td>
+                    <td>Михайлов Д. И.</td>
+                    <td>Прив.Клиент</td>
+                    <td>Консультант</td>
+                    <td>33</td>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                      </div>
+                    </td>
+                    <td>33,24</td>
+                    <td>13,4</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>24</td>
+                    <td>1235</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                        <span class="lt3">Томск-Кондырева</span>
+                      </div>
+                    </td>
+                    <td>Михайлов Д. И.</td>
+                    <td>Прив.Клиент</td>
+                    <td>Консультант</td>
+                    <td>33</td>
+                    <td>
+                      <div>
+                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                      </div>
+                    </td>
+                    <td>33,24</td>
+                    <td>13,4</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>24</td>
+                    <td>1235</td>
+                  </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
@@ -321,6 +463,47 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer_line">
+          <div class="title_line title_line_adaptive">
+            <div class="title_line_t filter">
+              Фильтры поиска
+            </div>
+          </div>
+          <div class="modal_line">
+            <a href="#" class="closebig"></a>
+            <h3>Фильтры поиска</h3>
+            <div class="component_body">
+              <div class="l_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Статус</label>
+                  </div>
+                </div>
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Тип склада</label>
+                  </div>
+                </div>
+              </div>
+              <div class="r_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Номер / наименование склада</label>
+                  </div>
+                </div>
+                <div class="nav_links">
+                  <a class="brd_green fill w50" href="#" style="margin-top: 0">Показать</a>
+                  <a class="brd_green w50 last" href="#" style="margin-top: 0">Сбросить</a>
+                </div>
               </div>
             </div>
           </div>
