--- a/lk15.html
+++ b/lk15.html
@@ -258,7 +258,7 @@
                             <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3 create_account">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -277,7 +277,7 @@
                             <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3 create_account">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -296,7 +296,7 @@
                             <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3 create_account">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -315,7 +315,7 @@
                             <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3 create_account">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -477,7 +477,9 @@
                       <th>№</th>
                       <th>Артикул</th>
                       <th>Товар</th>
-                      <th>Цена</th>
+                      <th>Цена розничная</th>
+                      <th>Цена продажи</th>
+                      <th>Скидка</th>
                       <th>Кол-во</th>
                       <th>Стоимость</th>
                       <th>Возвращено</th>
@@ -490,6 +492,8 @@
                       <td>42451467</td>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
@@ -500,6 +504,68 @@
                       <td>42451467</td>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
                       <td>34</td>
                       <td>1076.40</td>
                       <td>1076.40</td>
