--- a/lk16.html
+++ b/lk16.html
@@ -182,8 +182,8 @@
                 <div class="line_param_top">
                   На счету у партнера:
                 </div>
-                <div class="line_param_bottom" style="color: #ED1A2E;">
-                  -2340
+                <div class="line_param_bottom">
+                  <a href="#" style="color: #ED1A2E; text-decoration: underline">-2340</a>
                 </div>
               </div>
             </div>
@@ -287,7 +287,9 @@
                     <th style="width: 20%">Наименование</th>
                     <th>Артикул</th>
                     <th>Баллы</th>
-                    <th>Цена</th>
+                    <th>Цена розничная</th>
+                    <th>Цена фактическая</th>
+                    <th>Размер скидки</th>
                     <th style="width: 6%">Остаток по складу</th>
                     <th>Количество</th>
                   </tr>
@@ -298,18 +300,7 @@
                     <td>115</td>
                     <td>24</td>
                     <td>457</td>
-                    <td>128</td>
-                    <td>
-                      <div style="margin-top: 11px">
-                        <span style="float: left;">1</span>
-                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                    <td>115</td>
-                    <td>24</td>
+                    <td>457</td>
                     <td>457</td>
                     <td>128</td>
                     <td>
@@ -324,6 +315,8 @@
                     <td>115</td>
                     <td>24</td>
                     <td>457</td>
+                    <td>457</td>
+                    <td>457</td>
                     <td>128</td>
                     <td>
                       <div style="margin-top: 11px">
@@ -336,6 +329,23 @@
                     <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                     <td>115</td>
                     <td>24</td>
+                    <td>457</td>
+                    <td>457</td>
+                    <td>457</td>
+                    <td>128</td>
+                    <td>
+                      <div style="margin-top: 11px">
+                        <span style="float: left;">1</span>
+                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                    <td>115</td>
+                    <td>24</td>
+                    <td>457</td>
+                    <td>457</td>
                     <td>457</td>
                     <td>128</td>
                     <td>
@@ -386,7 +396,9 @@
                       <th style="width: 35%">Наименование</th>
                       <th>Артикул</th>
                       <th>Баллы</th>
-                      <th>Цена</th>
+                      <th>Цена розничная</th>
+                      <th>Цена фактическая</th>
+                      <th>Размер скидки</th>
                       <th>Остаток по складу</th>
                       <th>Количество</th>
                     </tr>
@@ -397,13 +409,7 @@
                       <td>115</td>
                       <td>24</td>
                       <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
+                      <td>457</td>
                       <td>457</td>
                       <td>128</td>
                       <td>1</td>
@@ -413,6 +419,8 @@
                       <td>115</td>
                       <td>24</td>
                       <td>457</td>
+                      <td>457</td>
+                      <td>457</td>
                       <td>128</td>
                       <td>1</td>
                     </tr>
@@ -420,6 +428,18 @@
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>115</td>
                       <td>24</td>
+                      <td>457</td>
+                      <td>457</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>457</td>
                       <td>457</td>
                       <td>128</td>
                       <td>1</td>
