--- a/lk12.html
+++ b/lk12.html
@@ -167,7 +167,7 @@
                     </th>
                     <th>
                       <div>
-                        <span>№ дочернего склада</span>
+                        <span>ID дочернего склада</span>
                       </div>
                       <div class="table_array">
                         <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -300,6 +300,47 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer_line">
+          <div class="title_line title_line_adaptive">
+            <div class="title_line_t filter">
+              Фильтры поиска
+            </div>
+          </div>
+          <div class="modal_line">
+            <a href="#" class="closebig"></a>
+            <h3>Фильтры поиска</h3>
+            <div class="component_body">
+              <div class="l_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Статус</label>
+                  </div>
+                </div>
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Дочерний склад</label>
+                  </div>
+                </div>
+              </div>
+              <div class="r_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Номер / наименование склада</label>
+                  </div>
+                </div>
+                <div class="nav_links">
+                  <a class="brd_green fill w50" href="#" style="margin-top: 0">Показать</a>
+                  <a class="brd_green w50 last" href="#" style="margin-top: 0">Сбросить</a>
+                </div>
               </div>
             </div>
           </div>
