--- a/lk7.html
+++ b/lk7.html
@@ -141,7 +141,7 @@
             <div class="component_head_sort" style="width: 100%">
               <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
-                <input type="text" placeholder="Период от и до"/>
+                <input type="text" placeholder="01.04.2020 - 09.09.2020" />
                 <span class="calendar"></span>
               </div>
             </div>
